# allocator-lib

./: CMakeLists.txt  CMakePresets.json  README.md  results.md
bench/: CMakeLists.txt  bench_allocators.cpp  bench_bump.cpp  bench_sbo.cpp  bench_vector_allocator.cpp
include/alloc/: bump.hpp  pool.hpp  slab.hpp  stl_slab_allocator.hpp  vector.hpp
tests/: CMakeLists.txt  test_bump.cpp  test_pool.cpp  test_slab.cpp  test_vector.cpp  test_vector_allocator.cpp  test_vector_sbo.cpp  utils.hpp
